# heart-disease

./: .ebignore  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  Procfile  README.md  application.py  cleaning_and_merging.py  data_dictionary.csv  data_dictionary.md  eb-logs.txt  pyproject.toml  requirements.txt  vis.py  visualization.py
.ebextensions/: 01_files.config  01_flask.config  nginx.config  python.config
.ebextensions/nginx/conf.d/: proxy.conf
.platform/nginx/conf.d/: proxy.conf
components/: chatbot.py  sidebar.py  visualisations.py
components/common/: filter_slider.py  gender_metric_selector.py  plots.py  year_slider.py
components/data/: __init__.py  data.py
components/tabs/: geo_eco.py  healthcare.py  introduction.py  trends.py  world_map.py
data/: cleaning_and_merging.py  data_dictionary.csv  i.ipynb  trends.ipynb
documentation/: README.md  code_reference.md  technical_documentation.md
var 2/log/: cron  messages
