[tool.black]
line-length = 99
target-version = ['py312']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
]

[tool.pylint.format]
max-line-length = 99

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "df", "x", "y"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
